MB-61965 : Update eventing prometheus stats

Add checkpoint failure stats by cursor_aware eventing functions
to the list of eventing failed_events.

Change-Id: Id5b2b02468ac788a6d2338d60b64232b5cc4dcb3
Reviewed-on: https://review.couchbase.org/c/eventing/+/210289
Reviewed-by: <ankit.prabhu@couchbase.com>
Tested-by: abhishekjindal <abhishek.jindal@couchbase.com>